1. Add a line in the "package.json" file to create a terminal command "npm run copy_index_as_200", which creates a "200.html" file in the "build" folder, similar to the "index.html" file located in the same folder; 2. Add a line in the "package.json" file to create the "npm run deploy" terminal command, which runs the "npm run build", "firebase deploy", "npm run copy_index_as_200" terminal commands, deploys to the "surge" hosting and runs the terminal command "surge list"; 3. Change automatically one file for "firebase" hosting.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
+    "deploy": "npm run build && firebase deploy && npm run copy_index_as_200 && surge --project ./build --domain https://entertask.surge.sh && surge list",
+    "copy_index_as_200": "copy build\\index.html build\\200.html",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
