1. Add the terminal commands "vercel --prod" and "vercel list" to the "package.json" file for the terminal command "npm run deploy", which are needed to upload the site to the "vercel" hosting and view information on downloads of all sites on hosting "vercel"; 2. Add automatically to the ".gitignore" file the line ".vercel"; 3. Create file "vercel.json" with json-object "{"routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]} "so that when you reload any page of the site on "vercel" hosting, the site continues to work; 4. Automatically update one file for "firebase" hosting.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "deploy": "npm run build && firebase deploy && netlify deploy --dir=build --prod && npm run copy_index_as_200 && surge --project ./build --domain https://entertask.surge.sh && surge list",
+    "deploy": "npm run build && firebase deploy && netlify deploy --dir=build --prod && vercel --prod && vercel list && npm run copy_index_as_200 && surge --project ./build --domain https://entertask.surge.sh && surge list",
     "copy_index_as_200": "copy build\\index.html build\\200.html",
     "start": "react-scripts start",
     "build": "react-scripts build",
