1. Fix a bug that caused an error when a user logged into the site and when updating the "Сегодня" and "Задачи" pages, if the user's current session time has expired and he needs to log into his account again; 2. Add a command in the "package.json" file to publish the site on the "surge" hosting at the URL-address intended for site development; 3. Change automatically one file for "firebase" hosting.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "deploy": "npm run build && firebase deploy && netlify deploy --dir=build --prod && vercel --prod && vercel list && npm run copy_index_as_200 && surge --project ./build --domain https://entertask.surge.sh && surge list",
+    "deploy_for_development": "npm run build && npm run copy_index_as_200 && surge --project ./build --domain https://entertask-dev.surge.sh && surge list",
     "copy_index_as_200": "copy build\\index.html build\\200.html",
     "start": "react-scripts start",
     "build": "react-scripts build",
